--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,6 @@
 {
   "name": "Projeto 2 - Mobile - PWA",
-  "short_name": "short name",
-  "theme_color": "#fff",
-  "background_color": "#fff",
-  "display": "standalone",
-  "orientation": "portrait",
-  "scope": "/index.html",
-  "start_url": "/",
+  "short_name": "proj-PWA",
   "icons": [
     {
       "src": "images/icons/icon-72x72.png",
@@ -48,5 +42,9 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#fff",
+  "theme_color": "#fff"
 }
